// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic create and run 1`] = `
Object {
  "isSuccess": true,
  "nextNode": "Under 18",
}
`;

exports[`basic create and run 2`] = `
Object {
  "isSuccess": true,
  "nextNode": "Upper 18",
}
`;
